@@ -279,6 +279,7 @@ t/1624_import_multipage_PDF3.t
 t/1625_import_pdf_bw.t
 t/1626_import_PDF_with_error.t
 t/1627_import_encrypted_pdf.t
+t/1628_import_pdf_metadata.t
 t/1631_import_ppm.t
 t/1632_import_ppm_with_error.t
 t/1641_import_png.t
